fix pipeline issue

--- a/.github/workflows/function.yml
+++ b/.github/workflows/function.yml
@@ -2,9 +2,10 @@ name: Build and deploy .NET Core Function App to Azure functions app
 on:
   push:
     paths-ignore:
+      - "Terraform/**"
       - ".github/workflows/terraform.yml"
     branches:
-      - mains
+      - main
 env:
   AZURE_FUNCTIONAPP_NAME: peepquote
   AZURE_FUNCTIONAPP_PACKAGE_PATH: PeepApi/publish
